[gd_scene load_steps=11 format=2]

[ext_resource path="res://screens/PageCollection.gd" type="Script" id=1]
[ext_resource path="res://screens/Img2Pdf.gd" type="Script" id=2]
[ext_resource path="res://widgets/FileDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/easy_embed/HTTP/EECommandHTTP.gd" type="Script" id=6]
[ext_resource path="res://res/icons/trash.svg" type="Texture" id=7]
[ext_resource path="res://screens/RemoveButton.gd" type="Script" id=8]
[ext_resource path="res://res/fonts/regular16.tres" type="DynamicFont" id=9]
[ext_resource path="res://widgets/ExceptionError.tscn" type="PackedScene" id=10]
[ext_resource path="res://res/fonts/heavy20.tres" type="DynamicFont" id=11]

[node name="Img2Pdf" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 871.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "img2pdf_description"

[node name="AddImg" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 875.0
margin_right = 940.0
margin_bottom = 20.0
text = "add_img"

[node name="ClearImgs" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 944.0
margin_right = 1024.0
margin_bottom = 20.0
text = "clear_imgs"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageCollection" type="GridContainer" parent="VBoxContainer/Control/ScrollContainer"]
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
removeButton = NodePath("../../../../RemoveButton")
reset_page_numbers_on_drag = true

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 5 )
disabled = true
text = "img2pdf_convert_button"

[node name="SaveFileDialog" parent="." instance=ExtResource( 4 )]
window_title = "Save a File"
mode = 4

[node name="OpenFileDialog" parent="." instance=ExtResource( 4 )]
filters = PoolStringArray( "*.png", "*.jpg", "*.jpeg", "*.bmp" )

[node name="Img2Pdf" type="Node" parent="."]
script = ExtResource( 6 )
command = "convert_img2pdf"

[node name="RemoveButton" type="Button" parent="."]
visible = false
anchor_left = 0.978
anchor_top = 0.828
anchor_right = 0.978
anchor_bottom = 0.828
margin_left = -53.0
margin_bottom = 56.0
icon = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExceptionError" parent="." instance=ExtResource( 10 )]

[node name="DropFilesInfo" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.26 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "drop_files_here_caps"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddImg" to="." method="_on_AddImg_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearImgs" to="." method="_on_ClearImgs_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="files_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_files_selected"]
[connection signal="command_failed" from="Img2Pdf" to="." method="_on_command_failed"]
[connection signal="command_successful" from="Img2Pdf" to="." method="_on_Img2Pdf_command_successful"]
[connection signal="embedding_error" from="Img2Pdf" to="." method="_on_embedding_error"]
[connection signal="on_delete" from="RemoveButton" to="." method="_on_RemoveButton_on_delete"]
