[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/Merge.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/regular16.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/fonts/button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://widgets/FileDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/easy_embed/HTTP/EECommandHTTP.gd" type="Script" id=5]
[ext_resource path="res://widgets/ExceptionError.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/fonts/heavy20.tres" type="DynamicFont" id=7]

[node name="Merge" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merge" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Merge"]
margin_right = 1024.0
margin_bottom = 24.0
alignment = 2

[node name="Label" type="Label" parent="Merge/HBoxContainer"]
margin_top = 2.0
margin_right = 929.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "merge_long"

[node name="AddDoc" type="Button" parent="Merge/HBoxContainer"]
margin_left = 933.0
margin_right = 1024.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "add_pdf_file"

[node name="ItemList" type="ItemList" parent="Merge"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_vertical = 3
select_mode = 1

[node name="RemoveDoc" type="Button" parent="Merge/ItemList"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -129.0
margin_top = 10.0
margin_right = -8.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "remove"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merge" type="Button" parent="Merge"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "merge"

[node name="FileDialog" parent="." instance=ExtResource( 4 )]

[node name="ExceptionError" parent="." instance=ExtResource( 6 )]
margin_left = 262.0
margin_top = 176.0
margin_right = 813.0
margin_bottom = 402.0

[node name="MergePDF" type="Node" parent="."]
script = ExtResource( 5 )
command = "merge_files"
timeout = 8.0

[node name="DropFilesInfo" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.26 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "drop_files_here_caps"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Merge/HBoxContainer/AddDoc" to="." method="_on_AddDoc_pressed"]
[connection signal="pressed" from="Merge/ItemList/RemoveDoc" to="." method="_on_RemoveDoc_pressed"]
[connection signal="pressed" from="Merge/Merge" to="." method="_on_Merge_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="command_failed" from="MergePDF" to="." method="_on_MergePDF_command_failed"]
[connection signal="command_successful" from="MergePDF" to="." method="_on_MergePDF_command_successful"]
[connection signal="embedding_error" from="MergePDF" to="." method="_on_MergePDF_embedding_error"]
[connection signal="no_connection" from="MergePDF" to="." method="_on_MergePDF_no_connection"]
